--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
-  <head>
-    <title>CSS Pertama Saya</title>
-  </head>
-  
-  <body>
-    <p>Ini aturcara css pertama saya</p>
-  </body>
-  
-  
+    <head>
+      <title>CSS Pertama Saya</title>
+      <style>
+          p {
+              color:red;
+          }
+      </style>
+    </head>
+    
+    <body>
+      <p>Ini aturcara css pertama saya menggunakan element selector</p>
+    </body>
 </html>
